# code

./: 01-Encapsulation-constructor.md  01-ObjectPassing.md  03-ScopesInheritance.md  04.md  05.md  06.md  07.md  08.md  09.md  6.cpp  7.cpp  8.cpp  README.md  abc.md  algo.md  algo1.html  algo2.html
0algos/: 2.10.1.cpp  2.cpp  code.c  o
NagyZH-0624-Alapkod/: NagyZH-0624.pro  README.md  a.out  army.cpp  army.h  castle.cpp  castle.h  cavalry.cpp  cavalry.h  in-army-1.txt  in-army-2.txt  in-army-3.txt  in-army-4.txt  in-castle-cavalry.json  in-castle-infantry.json  in-castle-machinery.json  infantry.cpp  infantry.h  machinery.cpp  machinery.h  main.cpp  militaryunit.cpp  militaryunit.h  minta-stdout.txt
NagyZH-250603-Alapkod/: NagyZH-0603.pro  README.md  a.out  camp.cpp  camp.h  character.cpp  character.h  dice.cpp  dice.h  in-team-1.txt  mage.cpp  mage.h  main.cpp  marksman.cpp  marksman.h  minta-stdout.txt  out-team-1-stats.json  out-team-2-stats.json  swordsman.cpp  swordsman.h  team.cpp  team.h
NagyZH-Sz12-Alapkod/: a.out  actionlist.cpp  actionlist.h  arena.cpp  arena.h  character.cpp  character.h  mage.cpp  mage.h  main.cpp  minta-stdout.txt  priest.cpp  priest.h  soldier.cpp  soldier.h
NagyZH-Sz14-Alapkod/: NagyZH-Sz14.txt  dragon.cpp  knight.cpp  mage.cpp  mage.h  main.cpp  party.h  ranger.cpp  tavern.cpp  tavern.h  warrior.cpp
Nagyzh-250509/: a.out  food.cpp  foodbar.cpp  foods.json  json.hpp  kebab.cpp  kebab.h  order1.json  pizza.h
Nagyzh-250509_pizza/: README.md  a.out  food.cpp  food.h  foodbar.cpp  foodbar.h  order.cpp  order.h
Nagyzh20250509/: food.h  foodbar.h  hamburger.cpp  hamburger.h  main.cpp  minta-stdout.txt  (+2 more)
code/orai/2/: CMakeLists.txt  README.md  main.cpp  szamok.cpp  szamok.h
code/orai/Vector_Fajl/: CMakeLists.txt  README.md  main.cpp
feladat/01/k/doboz/: CMakeLists.txt  main.cpp
feladat/Purchase/: CMakeLists.txt  a-5-100.txt  b-15-30.txt  main.cpp  multiproduct.cpp  multiproduct.h  nostream.cpp  packagedproduct.cpp  packagedproduct.h  product.h  singleproduct.cpp  singleproduct.h
feladat/libraryCLI/: CMakeLists.txt  a.out  book.cpp  book.h  cli.cpp  cli.h  date.cpp  date.h  emailnotifier.cpp  emailnotifier.h  library.cpp  library.h  loan.cpp  loan.h  logger.cpp  logger.h  main.cpp  notifier.cpp  notifier.h  patron.cpp  patron.h  smsnotifier.cpp  smsnotifier.h  student.h
(+2455 files in other folders)
